# stbar

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
assets/font/: Tamzen7x14r.bdf  tamzen.json
lib/: node.h  test.cpp
src/: draw_program.cpp  draw_program.h  font.cpp  font.h  format.cpp  format.h  output.cpp  output.h  renderer.cpp  renderer.h  segment.cpp  segment.h  segments.cpp  segments.h  static_rect.cpp  static_rect.h  types.h  window.cpp  window.h
src/gl/: array.cpp  array.h  attribute.cpp  attribute.h  buffer.cpp  buffer.h  forward.cpp  forward.h  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform.cpp  uniform.h
src/widget/: cpu.cpp  date.cpp  dirty.cpp  io.cpp  load.cpp  memory.cpp  net.cpp  sound.cpp  space.cpp  temp.cpp  widgets.h  widgets_default.h  window.cpp  window.h
